# LibrarianFileManager

./: .gitignore  BUILD_README.md  MANIFEST.in  Makefile  README.md  build_requirements.txt  pyproject.toml  setup.cfg  setup.py  setup_DEP.cfg  setup_DEP.py
src/librarian/: README.md  actor.py  catalog.py  librarian.py
src/librarian/actors/: plotter.py  reader.py  reporter.py  writer.py
src/librarian/gui/: comboplotter_gui.py  librarian_gui.py  plotter_gui.py  scienceplotter_gui.py
src/librarian/plotters/: comboplotter.py  errorbarplotter.py  histplotter.py  scienceplotter.py
src/librarian/reporters/: tex_reporters.py
src/librarian/reporters/resources/beamer_template/: report.tex
src/librarian/reporters/resources/beamer_template/includes/: paper_preamble.tex
src/librarian/reporters/resources/tex_template/: project_utils.tex  report.tex
src/librarian/reporters/resources/tex_template/includes/: comment_utils.tex
src/librarian/reporters/resources/tex_template/includes/jhep/: JHEP.bst  jheppub.sty
src/librarian/writers/: cmdln_writer.py
test_librarian/: Makefile  README.md  project_info.py  requirements.txt  test_librarian.py  test_plotter.py
tests/: Makefile
tests/test_librarian/: Makefile  Makefile.inc  catalog_info.py  project_info.py  test_librarian.py  test_plotter.py  test_writer.py
tests/test_librarian/catalogs/: README.md
tests/test_librarian/catalogs/figures/: figures.yaml
tests/test_librarian/catalogs/nonuniform_data/: nonuniform_data.yaml
tests/test_librarian/catalogs/uniform_data/: uniform_data.yaml
tests/test_librarian_gui/: Makefile  README.md  project_info.py  test_librarian_gui.py
