[project]
name = "LibrarianFileManager"
version = "1.0.1"
authors = [
  { name="Samuel Alipour-fard", email="samuelaf@mit.edu" },
]
description = "A librarian for managing your files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "dill >= 0.3.0",
    "pathlib >= 1.0.0",
    "uuid >= 1.30",
    "datetime >= 5.0",
    "pytimedinput >= 2.0.0",
    "matplotlib >= 3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/samcaf/LibrarianFileManager"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
