[project]
name = "LibrarianFileManager"
version = "0.0.1"
authors = [
  { name="Samuel Alipour-fard", email="samuelaf@mit.edu" },
]
description = "A librarian for managing your files: General purpose file management tools for initializing, keeping track of, and interacting with file structures e.g. for cataloging data, plotting of figures, etc.)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "dill >= 0.3.0",
    "pathlib >= 1.0.0",
    "PyYAML >= 6.0",
    "uuid >= 1.30",
    "datetime >= 5.0",
    "pytimedinput >= 2.0.0",
    "matplotlib >= 3.0.0",
    "tk >= 0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/samcaf/LibrarianFileManager"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src",
         "src/librarian/reporters/resources",
         "src/librarian/reporters/resources/beamer_template",
         "src/librarian/reporters/resources/beamer_template/includes",
         "src/librarian/reporters/resources/beamer_template/figures",
         "src/librarian/reporters/resources/tex_template",
         "src/librarian/reporters/resources/tex_template/includes",
         "src/librarian/reporters/resources/tex_template/figures"
        ]

[tool.setuptools.package-data]
"librarian.reporters.resources" = ["*"]
"librarian.reporters.resources.beamer_template" = ["*"]
"librarian.reporters.resources.beamer_template.includes" = ["*"]
"librarian.reporters.resources.beamer_template.figures" = ["*"]
"librarian.reporters.resources.tex_template" = ["*"]
"librarian.reporters.resources.tex_template.includes" = ["*"]
"librarian.reporters.resources.tex_template.figures" = ["*"]
